# sc-inspector

./: .gitignore  pyproject.toml  test.ipynb
docs/: textual-custom-widget-guide.md
script/: build.sh
src/sc_inspector/: main.py
src/sc_inspector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sc_inspector/constant/: color.py
src/sc_inspector/controller/: app.py
src/sc_inspector/model/: metadata.py
src/sc_inspector/utils/: file.py  io.py  parser.py
src/sc_inspector/view/gene_manager/: view.py
src/sc_inspector/view/main/: view.py
src/sc_inspector/view/metadata_manager/: style.tcss  view.py
src/sc_inspector/view/scatter_manager/: projection.py  view.py
src/sc_inspector/view/style/: gene-manager.tcss  main.tcss  metadata-manager.tcss  scatter-manager.tcss
